Version 0.7.3 -- Subversion
-----------------

* Added Italian translation (emaunelez)
* Added more callback functions to module API
* Fixed bug with relative paths in dhtmlmenu
* Fixed changing ownership of html blobs
* Fixed displaying html_blobs in modules with executeuser
* Fixed HTML bug in print module (#000048)
* Fixed error message with Deleting templates (Part of #000047)
* Reenabled Image Manager
* Removed Allow Admin Access from add/edit user
* Updated adodb to 4.54

Vrersion 0.7.2 -- Wed Nov 10 2004
-----------------

* Added missing edit links to titles in CSS and News admin (#000035)
* Added ability to invert the foreground/background color of htmlarea 
(#0000031)
* Added search and replace to htmlarea
* Added ability to clean pastes from Microsoft Word in htmlarea
* Added pagination to majority of admin list pages
* Added google search plugin
* Added google pagerank plugin
* Added Expand/Collapse plugin
* Added print page plugin
* Added strip_tags to RSS output in News module (#000042)
* Changed en_US to UTF-8
* Changed with of add and edit html blob pages
* Changed all template lists to be ordered by template name (#000038)
* Changed edit html blob so that is only modifies the timestamps of pages it 
is actually used on.
* Changed all user lists to be ordered by username (#000039)
* Changed add content so that the alias is based off of menutext instead of
the title
* Changed upgrade script so that it always clears the cache directories even
if there is no schema change.
* Fixed custom 404 error template usage
* Fixed add and edit content pages so that the alias field is more intelligent
when auto_alias_content is on (#000043)
* Fixed login to redirect back to originally requested link
* Fixed stupid encoding issue with cms_htmlentities
* Fixed htmlarea not loading due to a notice level error (#0000034)
* Fixed a few problems with htmlarea's fullscreen not working in Internet 
Explorer
* Fixed htmlblob to fill the width of the screen (#0000037)