@@ -373,6 +373,7 @@ function showPageFour() {
 	$newconfig["image_uploads_path"] = $newconfig['root_path'] . "/uploads/images";
 	$newconfig["image_uploads_url"] = $newconfig['root_url'] ."/uploads/images";
 	$newconfig["default_encoding"] = "";
+	$newconfig["disable_htmlarea_translation"] = false;
 
     $configfile = dirname(__FILE__)."/config.php";
     ## build the content for config file
