@@ -93,6 +93,8 @@ function cms_config_load($loadLocal = true)
 
 	$config["default_encoding"] = "";
 
+	$config["disable_htmlarea_translation"] = false;
+
 	if ($loadLocal == true)
 	{
 		if (file_exists(dirname(dirname(__FILE__))."/config.php") && !cms_config_check_old_config())
